# painty

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE.bazel  painty.bzl
.github/workflows/: bazel.yml  clang-format.yml  clang-tidy.yml  cmake.yml
apps/painty_gui/: BUILD.bazel  CMakeLists.txt  DigitalCanvas.cpp  DigitalCanvas.cxx  DigitalCanvas.h  DigitalCanvas.hxx  DigitalPaint.cpp  DigitalPaint.cxx  DigitalPaintMainWindow.cpp  DigitalPaintMainWindow.cxx  DigitalPaintMainWindow.hxx  DigitalPaintMainWindow.ui  KMVisualizeWidget.cpp  KMVisualizeWidget.cxx  KMVisualizeWidget.hxx
apps/painty_gui/src/: DigitalCanvas.cpp  DigitalCanvas.h  DigitalPaint.cpp  DigitalPaintMainWindow.cpp  DigitalPaintMainWindow.h  DigitalPaintMainWindow.ui  KMVisualizeWidget.cpp  KM_visualize_widget.cpp  KM_visualize_widget.h  digital_canvas.cpp  digital_canvas.h  digital_paint.cpp  digital_paint_main_window.cpp  digital_paint_main_window.h  digital_paint_main_window.ui
apps/palette_extraction/: BUILD.bazel  CMakeLists.txt  README.md  main.cxx
apps/sbr_painter/: BUILD.bazel  CMakeLists.txt  README.md  main.cxx  sbr_config.json
data/: BUILD.bazel
data/paint_palettes/: curtis-watercolor.json  lindemeier-measured.json  thinning_medium.json
data/sample_0/: spine.json  spine.txt
doc/palette_extraction/: imageSource.txt  pexels-photo-977737-extractedPalette.json
include/painty/: brush_stroke_sample.h  canvas.h  footprint_brush.h  image_io.h  io.h  kubelka_munk.h  mat.h  math.h  paint_layer.h  painty.h  renderer.h  (+6 more)
modules/core/: BUILD.bazel  CMakeLists.txt
modules/core/include/painty/core/: color.h  kubelka_munk.h  math.h  spline.h  vec.h
modules/core/test/: CMakeLists.txt
modules/core/test/src/: kubelka_munk_test.cpp  math_test.cpp  spline_test.cpp  vec_test.cpp
painty/: BUILD.bazel
painty/core/: BUILD.bazel  CMakeLists.txt  Color.h  Color.hxx  KubelkaMunk.h  KubelkaMunk.hxx  Math.h  Math.hxx  Spline.h  Spline.hxx  ThreadPool.hxx  Timer.hxx  Types.hxx  Vec.h  Vec.hxx  color.h  kubelka_munk.h  math.h  types.h  vec.h
painty/core/src/: ThreadPool.cxx  Timer.cxx
painty/core/test/: CMakeLists.txt
painty/core/test/src/: KubelkaMunkTest.cpp  KubelkaMunkTest.cxx  MathTest.cpp  MathTest.cxx  SplineTest.cpp  SplineTest.cxx  ThreadPoolTest.cxx  TimerTest.cxx  VecTest.cpp  VecTest.cxx  kubelka_munk_test.cpp  math_test.cpp  spline_test.cpp  vec_test.cpp
painty/gpu/: BUILD.bazel  CMakeLists.txt  GpuMat.hxx  GpuTaskQueue.hxx
painty/gpu/src/: GpuTaskQueue.cxx
painty/gpu/test/: CMakeLists.txt
painty/gpu/test/src/: GpuMatTest.cxx
painty/image/: BUILD.bazel  CMakeLists.txt  ColorExtraction.hxx  Convolution.h  Convolution.hxx  EdgeTangentFlow.h  EdgeTangentFlow.hxx  FlowBasedDoG.h  FlowBasedDoG.hxx  Mat.h  Mat.hxx  Superpixel.h  Superpixel.hxx  TextureWarp.h  TextureWarp.hxx  convolution.h  edge_tangent_flow.h  mat.h  superpixel.h
painty/image/src/: ColorExtraction.cxx  Convolution.cpp  Convolution.cxx  EdgeTangentFlow.cpp  EdgeTangentFlow.cxx  FlowBasedDoG.cpp  FlowBasedDoG.cxx  Superpixel.cpp  Superpixel.cxx  TextureWarp.cpp  TextureWarp.cxx  convolution.cpp  edge_tangent_flow.cpp  flow_based_dog.cpp  superpixel.cpp  texture_warp.cpp
painty/image/test/: CMakeLists.txt
painty/image/test/src/: ConvolutionTest.cpp  ConvolutionTest.cxx  EdgeTangentFlowTest.cpp  EdgeTangentFlowTest.cxx  FlowBasedDoGTest.cpp  FlowBasedDoGTest.cxx  MatTest.cpp  MatTest.cxx  SuperpixelTest.cpp  SuperpixelTest.cxx  convolution_test.cpp  edge_tangent_flow_test.cpp  flow_based_dog_test.cpp  mat_test.cpp  superpixel_test.cpp
painty/io/: BUILD.bazel  CMakeLists.txt  ImageIO.h  ImageIO.hxx  image_io.h
painty/io/src/: ImageIO.cpp  ImageIO.cxx  image_io.cpp
painty/io/test/: CMakeLists.txt
painty/io/test/src/: ImageIOTest.cpp  ImageIOTest.cxx  image_io_test.cpp  main.cxx
painty/mixer/: BUILD.bazel  CMakeLists.txt  PaintCoeff.hxx  PaintMixer.hxx  Palette.hxx  Serialization.hxx
painty/mixer/src/: PaintCoeff.cxx  PaintMixer.cxx  Palette.cxx  Serialization.cxx
painty/mixer/test/: CMakeLists.txt
painty/mixer/test/src/: SerializationTest.cxx
painty/renderer/: BUILD.bazel  BrushBase.hxx  BrushStrokeSample.h  BrushStrokeSample.hxx  CMakeLists.txt  Canvas.h  Canvas.hxx  CanvasGpu.hxx  FootprintBrush.h  FootprintBrush.hxx  PaintLayer.h  PaintLayer.hxx  PaintLayerGpu.hxx  Renderer.h  Renderer.hxx  SbrRenderThread.hxx  Smudge.h  Smudge.hxx  TextureBrush.h  TextureBrush.hxx  TextureBrushDictionary.hxx  TextureBrushGpu.hxx  footprint_brush.h  texture_brush.h
painty/renderer/shaders/: BUILD.bazel  BrushTextureWarp.frag.glsl  BrushTextureWarp.vert.glsl  ClearTextureFootprint.compute.glsl  ComposeLayerOnSubstrate.compute.glsl  DryingStep.compute.glsl  PaintTextureFootprintOnCanvas.compute.glsl  Smudge.compute.glsl
painty/renderer/src/: BrushStrokeSample.cpp  BrushStrokeSample.cxx  CanvasGpu.cxx  PaintLayerGpu.cxx  SbrRenderThread.cxx  TextureBrushDictionary.cxx  TextureBrushGpu.cxx  brush_stroke_sample.cpp
painty/renderer/test/: CMakeLists.txt
painty/renderer/test/src/: BrushStrokeSampleTest.cpp  BrushStrokeSampleTest.cxx  CanvasGpuTest.cxx  CanvasTest.cpp  CanvasTest.cxx  GpuTest.cxx  PaintLayerGpuTest.cxx  PaintLayerTest.cpp  PaintLayerTest.cxx  SbrRenderThreadTest.cxx  TextureBrushGpuTest.cxx  TextureBrushTest.cpp  TextureBrushTest.cxx  brush_stroke_sample_test.cpp  canvas_test.cpp  paint_layer_test.cpp  texture_brush_test.cpp
painty/sbr/: BUILD.bazel  CMakeLists.txt  PathTracer.hxx  PictureTargetSbrPainter.hxx  SbrPainter.hxx
painty/sbr/src/: PathTracer.cxx  PictureTargetSbrPainter.cxx  SbrPainter.cxx
painty/sbr/test/: CMakeLists.txt
painty/sbr/test/src/: PathTracerTest.cxx  SbrPainterTest.cxx
src/: CMakeLists.txt  brush_stroke_sample.cpp  image_io.cpp  io.cpp  texture_warp.cpp
test/: CMakeLists.txt  brush_stroke_sample_test.cpp  canvas_test.cpp  image_io_test.cpp  kubelka_munk_test.cpp  main.cpp  mat_test.cpp  math_test.cpp  paint_layer_test.cpp  spline_test.cpp  texture_brush_test.cpp  vec_test.cpp
tools/: lint-clang-tidy.sh
(+36 files in other folders)
