filegroup(
    name = "exported_test_images",
    srcs = glob([
        "test_images/*.jpg",
    ]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "exported_texture_sample_0",
    srcs = glob([
        "sample_0/*.png",
        "sample_0/*.txt",
    ]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "exported_footprint",
    srcs =  ["footprint/footprint.png"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "exported_palettes",
    srcs = glob([
        "paint_palettes/*.json"
    ]),
    visibility = ["//visibility:public"]
)
