load("@com_grail_bazel_compdb//:aspects.bzl", "compilation_database")

compilation_database(
    name = "painty_comdb",
    targets = [
        "//painty/core:painty_core",
        "//painty/image:painty_image",
        "//painty/io:painty_io",
        "//painty/renderer:painty_renderer",
        "//painty/mixer:painty_mixer",
        "//painty/sbr:painty_sbr",
    ],
    # [Optional]
    # If your exec root (value returned by `bazel info execution_root`)
    # is constant across your users, then you can supply the value here.
    # Otherwise, the default is `__EXEC_ROOT__` which you can replace in
    # the output file using `sed` or similar tool (see below).
    exec_root = "__EXEC_ROOT__",
)
