cc_library(
    name = "core",
    hdrs = [
        "include/painty/core/color.h",
        "include/painty/core/math.h",
        "include/painty/core/kubelka_munk.h",
        "include/painty/core/spline.h",
        "include/painty/core/types.h",
        "include/painty/core/vec.h"
    ],
    copts = ["-Imodules/core/include"],
    deps = ["//3rdParty:eigen"],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "test",
    srcs = glob(["test/src/*.cpp"]),
    deps = [
        ":core",
        "@gtest//:gtest"
    ],
    copts = ["-Imodules/core/include"]
)
