load("//:painty.bzl", "painty_cc_library", "painty_cc_test")

painty_cc_library(
    name = "painty_gpu",
    srcs = glob(["src/*.cxx"]),
    hdrs = glob(["*.hxx"]),
    visibility = ["//visibility:public"],
    deps = [
        "//painty/image:painty_image",
    ],
)

painty_cc_test(
    name = "test",
    srcs = glob(["test/src/*.cxx"]),
    deps = [
        ":painty_gpu",
        "@gtest"
    ]
)
