cc_library(
    name = "image",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdParty:opencv",
        "//painty/core:core",
    ],
)

cc_test(
    name = "test",
    srcs = glob(["test/src/*.cpp"]),
    deps = [
        ":image",
        "@gtest",
        "//painty/io:io",
    ],
    data = ["//data:exported_test_images"]
)
