cc_library(
    name = "io",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdParty:opencv",
        "//painty/core:core",
        "//painty/image:image",
    ],
)

cc_test(
    name = "test",
    srcs = glob(["test/src/*.cpp"]),
    deps = [
        ":io",
        "@gtest",
    ],
)
